javaSE复习, 链表实现，二叉树

--- a/com.quanchunlin/.settings/org.eclipse.core.resources.prefs
+++ b/com.quanchunlin/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/quanchunlin/Array.java=UTF-8
 encoding//src/com/quanchunlin/Main.java=UTF-8
+encoding//src/com/quanchunlin/link/LinkImpl.java=UTF-8
