--- a/com.quanchunlin/.settings/org.eclipse.core.resources.prefs
+++ b/com.quanchunlin/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/com/quanchunlin/Array.java=UTF-8
 encoding//src/com/quanchunlin/Main.java=UTF-8
 encoding//src/com/quanchunlin/link/LinkImpl.java=UTF-8
+encoding//src/com/quanchunlin/thread/Info.java=UTF-8
